--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:textSize="20sp"
         android:text="Новое исследование"
         android:textAppearance="?attr/textAppearanceHeadline5"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,13 +20,14 @@
 
     <TextView
         android:id="@+id/newsDetailContent"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="369dp"
+        android:layout_height="624dp"
         android:layout_margin="16dp"
         android:text="Полный текст новости..."
-        app:layout_constraintTop_toBottomOf="@id/newsDetailTitle"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/newsDetailTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
