--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_width="57dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="" />
 
         <EditText
             android:id="@+id/messageText"
@@ -48,12 +48,13 @@
         android:id="@+id/linearLayout"
         android:layout_width="411dp"
         android:layout_height="48dp"
-        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/messageLinearLayout">
+        app:layout_constraintTop_toTopOf="@+id/messageLinearLayout"
+        app:layout_constraintVertical_bias="1.0">
 
         <Button
             android:id="@+id/buttonNews"
@@ -79,13 +80,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messageRecyclerView"
-        android:layout_width="330dp"
-        android:layout_height="394dp"
+        android:layout_width="408dp"
+        android:layout_height="591dp"
         app:layout_constraintBottom_toTopOf="@+id/messageLinearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.436" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
