--- a/app/src/main/res/layout/news_item_layout.xml
+++ b/app/src/main/res/layout/news_item_layout.xml
@@ -8,14 +8,14 @@
     android:orientation="vertical"
     android:padding="8dp">
 
+
     <TextView
         android:id="@+id/newsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Новое исследование"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textColor="@android:color/white" />
-
+        android:textSize="20sp"
+        android:textAppearance="?attr/textAppearanceHeadline6" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -30,6 +30,7 @@
         android:text="Исследователи из Казанского Медицинского Института выявили новые факторы развития болезни Паркинсона."
         android:textAppearance="?attr/textAppearanceBody2"
         android:maxLines="2"
+        android:textSize="15sp"
         android:ellipsize="end"
         android:textColor="@android:color/darker_gray" />
 </LinearLayout>
