--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,9 @@
             android:layout_width="57dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="" />
+            android:text=""
+            android:backgroundTint="@color/blue"
+            android:textColor="@color/white"/>
 
         <EditText
             android:id="@+id/messageText"
@@ -34,14 +36,17 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="text"
-            android:text="Сообщение" />
+            android:hint="Сообщение" />
 
-        <Button
+        <ImageButton
             android:id="@+id/sendButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Отправить" />
+            app:srcCompat="@android:drawable/ic_menu_send"
+            android:backgroundTint="@color/blue"
+            android:textColor="@color/white"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -56,26 +61,33 @@
         app:layout_constraintTop_toTopOf="@+id/messageLinearLayout"
         app:layout_constraintVertical_bias="1.0">
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonNews"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Новости" />
+            android:backgroundTint="@color/blue"
+            android:textColor="@color/white"
+            app:srcCompat="?attr/actionModePasteDrawable" />
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonChat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Чат" />
+            android:backgroundTint="@color/blue"
+            android:textColor="@color/white"
+            app:srcCompat="@android:drawable/stat_notify_chat" />
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonUserInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Пользователь" />
+            android:backgroundTint="@color/blue"
+            android:textColor="@color/white"
+            app:srcCompat="?attr/actionModeSelectAllDrawable" />
+
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
