--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -19,26 +19,33 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonNews"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Новости" />
+            android:backgroundTint="@color/blue"
+            android:textColor="@color/white"
+            app:srcCompat="?attr/actionModePasteDrawable" />
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonChat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Чат" />
+            android:backgroundTint="@color/blue"
+            android:textColor="@color/white"
+            app:srcCompat="@android:drawable/stat_notify_chat" />
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonUserInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Пользователь" />
+            android:backgroundTint="@color/blue"
+            android:textColor="@color/white"
+            app:srcCompat="?attr/actionModeSelectAllDrawable" />
+
     </LinearLayout>
 
     <ImageView
@@ -111,6 +118,8 @@
         android:text="Изменить"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/blue"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <LinearLayout
